Add sections and header styling

--- a/index.html
+++ b/index.html
@@ -5,8 +5,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Raman Illusions</title>
+    <link href="https://fonts.googleapis.com/css?family=Lato|Nunito+Sans:300,400,600,700&display=swap" rel="stylesheet">
+    <link href="css/main.css" rel="stylesheet">
 </head>
 <body>
-    
+    <!-- navbar -->
+    <nav>
+
+    </nav>
+    <!-- promo -->
+    <header>
+        <div class="container promo">
+              <h1>Raman Illusions</h1>
+              <p>Breath, Entertain, Inspire.</p>
+        </div>
+    </header>
+    <!-- footer -->
+    <footer>
+
+    </footer>
 </body>
 </html>
