Add video background
Add basic styles for video background, and html structure

--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
     </nav>
     <!-- promo -->
     <header>
+        <video autoplay muted loop class="video-background">
+              <source src="assets/promo-video.mp4" type="video/mp4"> 
+        </video>
         <div class="container promo">
               <h1>Raman Illusions</h1>
               <p>Breath, Entertain, Inspire.</p>
