Add overlay to video background
Add extra styling to h1 element

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         <video autoplay muted loop class="video-background">
               <source src="assets/promo-video.mp4" type="video/mp4"> 
         </video>
+        <div class="video-background-overlay"></div>
         <div class="container promo">
               <h1>Raman Illusions</h1>
               <p>Breath, Entertain, Inspire.</p>
