Add formatting styles to header section

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Raman Illusions</title>
     <link href="https://fonts.googleapis.com/css?family=Lato|Nunito+Sans:300,400,600,700&display=swap" rel="stylesheet">
+    <link href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr"
+    crossorigin="anonymous" rel="stylesheet" >
     <link href="css/main.css" rel="stylesheet">
 </head>
 <body>
@@ -22,6 +24,11 @@
         <div class="container promo">
               <h1>Raman Illusions</h1>
               <p>Breath, Entertain, Inspire.</p>
+              <div class="container">
+                    <a class="main-button" href="">Learn More<i class="fas fa-angle-down"></i></a>
+                    <a class="secondary-button" href="">My Shows</a>
+              </div>
+             
         </div>
     </header>
     <!-- footer -->
