Add arrow to 'my shows' button

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
               <p>Breath, Entertain, Inspire.</p>
               <div class="container">
                     <a class="main-button" href="">Learn More<i class="fas fa-angle-down"></i></a>
-                    <a class="secondary-button" href="">My Shows</a>
+                    <a class="secondary-button" href="">My Shows<i class="fas fa-angle-right"></i></a>
               </div>
              
         </div>
