Add about section for homepage

--- a/index.html
+++ b/index.html
@@ -21,16 +21,34 @@
               <source src="assets/promo-video.mp4" type="video/mp4"> 
         </video>
         <div class="video-background-overlay"></div>
-        <div class="container promo">
+        <div class="promo">
               <h1>Raman Illusions</h1>
               <p>Breath, Entertain, Inspire.</p>
               <div class="container">
                     <a class="main-button" href="">Learn More<i class="fas fa-angle-down"></i></a>
                     <a class="secondary-button" href="">My Shows<i class="fas fa-angle-right"></i></a>
-              </div>
-             
+              </div> 
         </div>
     </header>
+    <!-- about -->
+    <section>
+        <div class="about-cta">
+            <div class="about-image">
+                    <img src="https://images.unsplash.com/photo-1517604931442-7e0c8ed2963c?ixlib=rb-1.2.1&auto=format&fit=crop&w=1650&q=80">
+            </div>
+            <div class="about-content">
+              <h3 class="main-heading">How We Came About?</h3>
+              <p>Always wanting to be the center of attention as a child, his teachers would tell his parents from a young age about the various farfetched stories he would tell other children just to entertain them.</p>
+              <a class="secondary-button" href="">Read More<i class="fas fa-angle-right"></i></a>
+            </div>
+        </div>
+    </section>
+    <!-- gallery -->
+    <section>
+        <div class="gallery">
+
+        </div>
+    </section>
     <!-- footer -->
     <footer>
 
