Add styles for about section

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             <div class="about-content">
               <h3 class="main-heading">How We Came About?</h3>
               <p>Always wanting to be the center of attention as a child, his teachers would tell his parents from a young age about the various farfetched stories he would tell other children just to entertain them.</p>
-              <a class="secondary-button" href="">Read More<i class="fas fa-angle-right"></i></a>
+              <a class="secondary-button-two" href="">Read More<i class="fas fa-angle-right"></i></a>
             </div>
         </div>
     </section>
