add new promo video
add style changes to about section on homepage

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Raman Illusions</title>
-    <link href="https://fonts.googleapis.com/css?family=Lato|Nunito+Sans:300,400,600,700,800,900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Lato:300,400|Nunito+Sans:300,400,600,700,800,900&display=swap" rel="stylesheet">
     <link href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr"
     crossorigin="anonymous" rel="stylesheet" >
     <link href="css/main.css" rel="stylesheet">
@@ -52,7 +52,7 @@
         </div>
     </header>
     <!-- about -->
-    <section class="about-curve">
+    <section>
         <div class="about-cta">
             <div class="about-image">
                     <img src="https://images.unsplash.com/photo-1517604931442-7e0c8ed2963c?ixlib=rb-1.2.1&auto=format&fit=crop&w=1650&q=80">
