Change about button style to white

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
               <h3 class="main-heading">How We Came About?</h3>
               <div class="about-underline"></div>
               <p class="about-para">Always wanting to be the center of attention as a child, his teachers would tell his parents from a young age about the various farfetched stories he would tell other children just to entertain them.</p>
-              <a class="secondary-button" href="">Read More<i class="fas fa-angle-right"></i></a>
+              <a class="main-button" href="">Read More<i class="fas fa-angle-right"></i></a>
             </div>
         </div>
     </section>
