remove about section

--- a/index.html
+++ b/index.html
@@ -51,20 +51,7 @@
               </div> 
         </div>
     </header>
-    <!-- about -->
-    <section>
-        <div class="about-cta">
-            <div class="about-image">
-                    <img src="https://images.unsplash.com/photo-1473147654241-a26ffc2146bb?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1993&q=80">
-            </div>
-            <div class="about-content">
-              <h3 class="main-heading">How We Came About?</h3>
-              <div class="about-underline"></div>
-              <p class="about-para">Always wanting to be the center of attention as a child, his teachers would tell his parents from a young age about the various farfetched stories he would tell other children just to entertain them.</p>
-              <a class="main-button" href="">Read More<i class="fas fa-angle-right"></i></a>
-            </div>
-        </div>
-    </section>
+    <!-- about <section> </section> -->
     <!-- gallery -->
     <section>
         <div class="gallery">
