Add html and styles for footer

--- a/index.html
+++ b/index.html
@@ -60,7 +60,39 @@
     </section>
     <!-- footer -->
     <footer>
-
+        <div class="footer-container">
+            <div class="footer-about">
+                <h3 class="footer-title">Raman Illusions</h3>
+                <p class="footer-about-subtitle">Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur illum beatae eius dignissimos veniam. Pariatur illum beatae eius dignissimos veniam.</p>
+                <div class="footer-social-media">
+                        <i class="footer-social-media-icon fab fa-facebook-f"></i>
+                        <i class="footer-social-media-icon fab fa-instagram"></i>
+                        <i class="footer-social-media-icon fab fa-twitter"></i>
+                        <i class="footer-social-media-icon fab fa-youtube"></i>
+                </div>
+            </div>
+            <div class="footer-pages">
+                <h3 class="footer-title">Pages</h3>
+                <ul class="footer-pages-list">
+                    <li>Home</li>
+                    <li>About</li>
+                    <li>Shows</li>
+                    <li>Work</li>
+                    <li>Contact</li>
+                </ul>
+            </div>
+            <div class="footer-contact">
+                <h3 class="footer-title">Contact</h3>
+                <p class="footer-contact-info">Email Address:  <span>info@ramanillusions.com</span></p>
+                <p class="footer-contact-info">Phone Number: <span>+905 - 962 - 1515</span></p>
+            </div>
+        </div>
+        <div class="footer-underline"></div>
+        <div class="copyright-container">
+            <small class="copyright-text">
+                © Copyright 2020, All Rights Reserved by, Raman Illusions
+            </small>
+        </div>
     </footer>
 </body>
 </html>
