add about section html and styles

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <!-- navbar -->
-    <nav>
+    <nav class="navbar-section">
         <div class="navbar">
             <div class="logo-container">
                     <p>Raman Illusions</p>
@@ -37,7 +37,7 @@
         </div>
     </nav>
     <!-- promo -->
-    <header>
+    <header class="header-section">
         <video autoplay muted loop class="video-background">
               <source src="assets/promo-video.mp4" type="video/mp4"> 
         </video>
@@ -51,7 +51,18 @@
               </div> 
         </div>
     </header>
-    <!-- about <section> </section> -->
+    <!-- about -->
+    <section class="about-section"> 
+        <div class="about-background-one"></div>
+        <div class="about-content">
+            <div class="about-content-inner">
+                <h2 class="main-heading">About Us</h2>
+                <p class="about-content-subtitle">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque finibus, lacus vel aliquam molestie, urna lacus aliquet tortor, sit amet semper magna purus sed nunc. Proin sed lobortis leo. Sed elementum scelerisque eleifend. </p>
+                <a class="secondary-button-two" href="">Read More<i class="fas fa-angle-right"></i></a>
+            </div>
+        </div>
+        <div class="about-background-two"></div>
+    </section>
     <!-- gallery -->
     <section>
         <div class="gallery">
