style about and shows section

--- a/index.html
+++ b/index.html
@@ -59,9 +59,52 @@
                 <h2 class="main-heading">About Us</h2>
                 <p class="about-content-subtitle">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque finibus, lacus vel aliquam molestie, urna lacus aliquet tortor, sit amet semper magna purus sed nunc. Proin sed lobortis leo. Sed elementum scelerisque eleifend. </p>
                 <a class="secondary-button-two" href="">Read More<i class="fas fa-angle-right"></i></a>
+                <div class="about-square-one"></div>
+                <div class="about-square-two"></div>
+                <div class="about-square-three"></div>
             </div>
         </div>
         <div class="about-background-two"></div>
+    </section>
+    <!-- shows -->
+    <section>
+        <div class="shows-container-one">
+            <div>
+                <h2 class="main-heading">Types of <span class="highlight-background">Shows</span></h2>
+                <p class="main-subheading">Find out which show is right for you.</p>
+                <i class="fas fa-chevron-down"></i>
+            </div>
+        </div>
+        <div class="shows-container-two">
+            <div class="shows-content">
+                <div class="shows-content-inner">
+                    <h3 class="main-heading-small">Walk Around Magic</h3>
+                    <p class="main-subheading">Is the most interactive type of magic as it involves pure sleight of hand. This form of magic is the most difficult type as you are literally performing inches away from your audience. </p>
+                    <a class="secondary-button-two" href="">More Details<i class="fas fa-angle-right"></i></a>
+                </div>
+            </div>
+            <div class="show-video-content">
+                <video autoplay muted loop class="walk-around-video">
+                        <source src="assets/walk-around-magic.mp4" type="video/mp4"> 
+                </video>
+                <div class="show-video-overlay"></div>
+            </div>
+        </div>
+        <div class="shows-container-three">
+            <div>
+                <img class="shows-image" src="https://images.pexels.com/photos/598626/pexels-photo-598626.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260">
+            </div>
+            <div class="shows-content">
+                <div class="shows-content-inner">
+                        <h3 class="main-heading-small">Parlour Magic</h3>
+                        <p class="main-subheading">Is usually for an audience of up to 20 to 100 people. The show is usually 30 minutes long and involves a lot of audience participation. </p>
+                        <a class="secondary-button-two" href="">More Details<i class="fas fa-angle-right"></i></a>
+                </div>
+            </div>
+        </div>
+        <div class="shows-container-four">
+
+        </div>
     </section>
     <!-- gallery -->
     <section>
