style shows section
Add new row to section

--- a/index.html
+++ b/index.html
@@ -103,7 +103,16 @@
             </div>
         </div>
         <div class="shows-container-four">
-
+                <div class="shows-content">
+                    <div class="shows-content-inner">
+                        <h3 class="main-heading-small">Stage Show</h3>
+                        <p class="main-subheading">Audiences ideally range from 200 to 2000 people. The show is 40 to 50 minutes long, and involves a dove act with a custom made soundtrack, as well as some of the best sleight of hand tricks and illusions that challenge logic!  </p>
+                        <a class="secondary-button-two" href="">More Details<i class="fas fa-angle-right"></i></a>
+                    </div>
+                </div>
+                <div>
+                    <img class="shows-image" src="https://images.pexels.com/photos/713149/pexels-photo-713149.jpeg?auto=compress&cs=tinysrgb&dpr=3&h=750&w=1260">
+                </div>
         </div>
     </section>
     <!-- gallery -->
