add featured work section

--- a/index.html
+++ b/index.html
@@ -59,9 +59,9 @@
                 <h2 class="main-heading">About Us</h2>
                 <p class="about-content-subtitle">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque finibus, lacus vel aliquam molestie, urna lacus aliquet tortor, sit amet semper magna purus sed nunc. Proin sed lobortis leo. Sed elementum scelerisque eleifend. </p>
                 <a class="secondary-button-two" href="">Read More<i class="fas fa-angle-right"></i></a>
-                <div class="about-square-one"></div>
+             <!--   <div class="about-square-one"></div>
                 <div class="about-square-two"></div>
-                <div class="about-square-three"></div>
+                <div class="about-square-three"></div> --> 
             </div>
         </div>
         <div class="about-background-two"></div>
@@ -115,10 +115,13 @@
                 </div>
         </div>
     </section>
-    <!-- gallery -->
+    <!-- featured work -->
     <section>
-        <div class="gallery">
-
+        <div class="featured-work">
+            <div>
+                <h2 class="main-heading">About Us</h2>
+                <p class="main-subheading">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque finibus, lacus vel aliquam molestie, urna lacus aliquet tortor, sit amet semper magna purus sed nunc. Proin sed lobortis leo. Sed elementum scelerisque eleifend. </p>             
+            </div>
         </div>
     </section>
     <!-- footer -->
