add background colours and skew to homepage

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         <div class="about-background-two"></div>
     </section>
     <!-- shows -->
-    <section>
+    <section class="shows-section">
         <div class="shows-container-one">
             <div>
                 <h2 class="main-heading">Types of <span class="highlight-background">Shows</span></h2>
@@ -116,12 +116,21 @@
         </div>
     </section>
     <!-- featured work -->
-    <section>
+    <section class="featured-work-section">
+        <div class="featured-work-title">
+                <h2 class="main-heading">Featured <span class="highlight-background">Work</span></h2>
+                <p class="main-subheading">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque finibus. </p>             
+        </div>
         <div class="featured-work">
-            <div>
-                <h2 class="main-heading">About Us</h2>
-                <p class="main-subheading">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque finibus, lacus vel aliquam molestie, urna lacus aliquet tortor, sit amet semper magna purus sed nunc. Proin sed lobortis leo. Sed elementum scelerisque eleifend. </p>             
-            </div>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/Y1XSh216Xuo" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/WobJBLb9Po4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/FHBUaoid1ss" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/0npVUMi_Ux0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/WBlrETm9Ato" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/IlPIIFVG3mc" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </div>
+        <div class="featured-work-button">
+                <a class="secondary-button-two" href="">View More<i class="fas fa-angle-right"></i></a>
         </div>
     </section>
     <!-- footer -->
