Change navbar background and color on scroll

--- a/index.html
+++ b/index.html
@@ -119,7 +119,8 @@
     <section class="featured-work-section">
         <div class="featured-work-title">
                 <h2 class="main-heading">Featured <span class="highlight-background">Work</span></h2>
-                <p class="main-subheading">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque finibus. </p>             
+                <p class="main-subheading">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque finibus. </p> 
+                <i class="fas fa-chevron-down"></i>            
         </div>
         <div class="featured-work">
                 <iframe width="560" height="315" src="https://www.youtube.com/embed/Y1XSh216Xuo" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
@@ -130,7 +131,7 @@
                 <iframe width="560" height="315" src="https://www.youtube.com/embed/IlPIIFVG3mc" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
         <div class="featured-work-button">
-                <a class="secondary-button-two" href="">View More<i class="fas fa-angle-right"></i></a>
+                <a class="secondary-button-two" href="">See More Projects<i class="fas fa-angle-right"></i></a>
         </div>
     </section>
     <!-- footer -->
@@ -169,5 +170,6 @@
             </small>
         </div>
     </footer>
+    <script src="js/app.js"></script>
 </body>
 </html>
