--- a/index.html
+++ b/index.html
@@ -19,19 +19,19 @@
             </div>
             <ul class="navbar-container">
                 <li class="nav-item">
-                    <a class="nav-link">Home</a>
+                    <a class="nav-link" href="/">Home</a>
                 </li>
                 <li class="nav-item">
-                        <a class="nav-link">About</a>
+                        <a class="nav-link" href="pages/about.html">About</a>
                 </li>
                 <li class="nav-item">
-                        <a class="nav-link">Shows</a>
+                        <a class="nav-link" href="pages/shows.html">Shows</a>
                 </li>        
                 <li class="nav-item">
-                        <a class="nav-link">Work</a>
+                        <a class="nav-link" href="pages/work.html">Work</a>
                 </li>            
                 <li class="nav-item">
-                        <a class="nav-link">Contact</a>
+                        <a class="nav-link" href="pages/contact.html">Contact</a>
                 </li>                                   
             </ul>
         </div>
