change border radius on buttons
and, change background color and grid-gap on featured work section

--- a/index.html
+++ b/index.html
@@ -123,12 +123,12 @@
                 <i class="fas fa-chevron-down"></i>            
         </div>
         <div class="featured-work">
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/Y1XSh216Xuo" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/WobJBLb9Po4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/FHBUaoid1ss" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/0npVUMi_Ux0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/WBlrETm9Ato" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/IlPIIFVG3mc" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <iframe class="featured-work-one"  width="560" height="315" src="https://www.youtube.com/embed/Y1XSh216Xuo" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <iframe class="featured-work-two" width="560" height="315" src="https://www.youtube.com/embed/WobJBLb9Po4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <iframe class="featured-work-three" width="560" height="315" src="https://www.youtube.com/embed/FHBUaoid1ss" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <iframe class="featured-work-four" width="560" height="315" src="https://www.youtube.com/embed/0npVUMi_Ux0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <iframe class="featured-work-five" width="560" height="315" src="https://www.youtube.com/embed/WBlrETm9Ato" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <iframe class="featured-work-six" width="560" height="315" src="https://www.youtube.com/embed/IlPIIFVG3mc" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
         <div class="featured-work-button">
                 <a class="secondary-button-two" href="">See More Projects<i class="fas fa-angle-right"></i></a>
