Add new parlour magic image

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
         </div>
         <div class="shows-container-three">
             <div>
-                <img class="shows-image" src="https://images.pexels.com/photos/598626/pexels-photo-598626.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260">
+                <img class="shows-image" src="assets/crowd-participating-at-event.jpg">
             </div>
             <div class="shows-content">
                 <div class="shows-content-inner">
