--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                     </div>
                 </div>
                 <div>
-                    <img class="shows-image" src="https://images.pexels.com/photos/713149/pexels-photo-713149.jpeg?auto=compress&cs=tinysrgb&dpr=3&h=750&w=1260">
+                    <img class="shows-image" src="assets/dove.jpeg">
                 </div>
         </div>
     </section>
