add gallery to about page
- responsive gallery built with flexbox

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -42,7 +42,7 @@
             <div>
                 <h1 class="page-heading">Contact Us</h1>
                 <p class="main-subheading-light">Feel free to contact us today!</p>   
-                <a class="main-button">Learn More<i class="fas fa-angle-right"></i></a>
+                <a class="main-button" href="about.html">Learn More<i class="fas fa-angle-right"></i></a>
             </div>
         </div>
     </section>
