add styles for about page layout

--- a/pages/about.html
+++ b/pages/about.html
@@ -46,12 +46,38 @@
             </div>
         </div>
     </section>
+    <!-- about page info -->
+    <section>
+        <div class="about-info-container">
+            <div class="about-info">
+                <h2 class="main-heading">Title Goes Here</h2>
+                <p class="main-subheading">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce volutpat est tellus, eget pellentesque turpis posuere vitae. Duis placerat molestie urna vel accumsan. Sed malesuada nibh sed lacus scelerisque, at vulputate orci euismod. At vulputate orci euismod.</p>
+                <a class="secondary-button-two" href="">My Shows<i class="fas fa-angle-right"></i></a>
+            </div>
+            <div class="position-relative">
+                <img class="img-fluid" src="https://instagram.fykz1-1.fna.fbcdn.net/v/t51.2885-15/e35/54446813_2191224517582332_9008173078773137776_n.jpg?_nc_ht=instagram.fykz1-1.fna.fbcdn.net&_nc_cat=100&_nc_ohc=x9QZr8b_zQYAX8ldwGI&oh=3142b06be2f23dc4b904b5485166be4b&oe=5E8CDF9D">
+                <div class="skew-right"></div>
+            </div>
+        </div>
+    </section>
+    <div class="about-info-container-two">
+            <div class="position-relative">
+                <img class="img-fluid" src="https://instagram.fykz1-1.fna.fbcdn.net/v/t51.2885-15/e35/54446813_2191224517582332_9008173078773137776_n.jpg?_nc_ht=instagram.fykz1-1.fna.fbcdn.net&_nc_cat=100&_nc_ohc=x9QZr8b_zQYAX8ldwGI&oh=3142b06be2f23dc4b904b5485166be4b&oe=5E8CDF9D">
+                <div class="skew-left"></div>
+            </div>
+            <div class="about-info">
+                <h2 class="main-heading">Title Goes Here</h2>
+                <p class="main-subheading">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce volutpat est tellus, eget pellentesque turpis posuere vitae. Duis placerat molestie urna vel accumsan. Sed malesuada nibh sed lacus scelerisque, at vulputate orci euismod. At vulputate orci euismod.</p>
+                <a class="secondary-button-two" href="">My Shows<i class="fas fa-angle-right"></i></a>
+            </div>
+        </div>
+    </section>   
     <!-- about page gallery -->
     <section id="gallery">
         <div class="gallery-container">
             <div class="gallery-header">
                 <h2 class="main-heading">Our Gallery</h2>
-                <p class="main-subheading">Lorem ipsum dolor sit amet, consectetur adipiscing elit. </p>
+                <p class="main-subheading">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
                 <i class="fas fa-chevron-down"></i>
             </div>
             <div class="gallery">
@@ -112,5 +138,6 @@
             </small>
         </div>
     </footer>
+    <script src="../js/app.js"></script>
 </body>
 </html>
