Refine homepage layout and footer

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -19,19 +19,19 @@
             </div>
             <ul class="navbar-container">
                 <li class="nav-item">
-                    <a class="nav-link" href="/">Home</a>
+                    <a class="nav-link" href="../index.html">Home</a>
                 </li>
                 <li class="nav-item">
-                        <a class="nav-link" href="pages/about.html">About</a>
+                        <a class="nav-link" href="about.html">About</a>
                 </li>
                 <li class="nav-item">
-                        <a class="nav-link" href="pages/shows.html">Shows</a>
+                        <a class="nav-link" href="shows.html">Shows</a>
                 </li>        
                 <li class="nav-item">
-                        <a class="nav-link" href="pages/work.html">Work</a>
+                        <a class="nav-link" href="work.html">Work</a>
                 </li>            
                 <li class="nav-item">
-                        <a class="nav-link" href="pages/contact.html">Contact</a>
+                        <a class="nav-link" href="contact.html">Contact</a>
                 </li>                                   
             </ul>
         </div>
@@ -100,11 +100,11 @@
             <div class="footer-pages">
                 <h3 class="footer-title">Pages</h3>
                 <ul class="footer-pages-list">
-                    <li>Home</li>
-                    <li>About</li>
-                    <li>Shows</li>
-                    <li>Work</li>
-                    <li>Contact</li>
+                    <li><a href="../index.html">Home</a></li>
+                    <li><a href="about.html">About</a></li>
+                    <li><a href="shows.html">Shows</a></li>
+                    <li><a href="work.html">Work</a></li>
+                    <li><a href="contact.html">Contact</a></li>
                 </ul>
             </div>
             <div class="footer-contact">
