--- a/index.html
+++ b/index.html
@@ -123,15 +123,29 @@
                 <i class="fas fa-chevron-down"></i>            
         </div>
         <div class="featured-work">
-                <iframe class="featured-work-one"  width="560" height="315" src="https://www.youtube.com/embed/Y1XSh216Xuo" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                <iframe class="featured-work-two" width="560" height="315" src="https://www.youtube.com/embed/WobJBLb9Po4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <div>
+                    <iframe class="featured-work-one"  width="560" height="315" src="https://www.youtube.com/embed/FHBUaoid1ss" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                </div>
+                <div class="featured-video-info">
+                    <h3 class="main-heading-small">Monday Magic</h3>
+                    <p class="main-subheading">Audiences ideally range from 200 to 2000 people. The show is 40 to 50 minutes long. </p>            
+                    <a class="secondary-button-two" href="">See More Projects<i class="fas fa-angle-right"></i></a>
+                </div>
+                <div class="featured-video-info">
+                    <h3 class="main-heading-small">Picture Magic</h3>
+                    <p class="main-subheading">Audiences ideally range from 200 to 2000 people. The show is 40 to 50 minutes long. </p>
+                    <a class="secondary-button-two" href="">See More Projects<i class="fas fa-angle-right"></i></a>
+                </div>
+                <div>
+                    <iframe class="featured-work-two" width="560" height="315" src="https://www.youtube.com/embed/WBlrETm9Ato" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                </div>
+
+                <!--
                 <iframe class="featured-work-three" width="560" height="315" src="https://www.youtube.com/embed/FHBUaoid1ss" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 <iframe class="featured-work-four" width="560" height="315" src="https://www.youtube.com/embed/0npVUMi_Ux0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 <iframe class="featured-work-five" width="560" height="315" src="https://www.youtube.com/embed/WBlrETm9Ato" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 <iframe class="featured-work-six" width="560" height="315" src="https://www.youtube.com/embed/IlPIIFVG3mc" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-        </div>
-        <div class="featured-work-button">
-                <a class="secondary-button-two" href="">See More Projects<i class="fas fa-angle-right"></i></a>
+                -->
         </div>
     </section>
     <!-- footer -->
@@ -150,11 +164,11 @@
             <div class="footer-pages">
                 <h3 class="footer-title">Pages</h3>
                 <ul class="footer-pages-list">
-                    <li>Home</li>
-                    <li>About</li>
-                    <li>Shows</li>
-                    <li>Work</li>
-                    <li>Contact</li>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="/pages/about.html">About</a></li>
+                    <li><a href="/pages/shows.html">Shows</a></li>
+                    <li><a href="/pages/work.html">Work</a></li>
+                    <li><a href="/pages/contact.html">Contact</a></li>
                 </ul>
             </div>
             <div class="footer-contact">
