Style about page layout

--- a/index.html
+++ b/index.html
@@ -57,11 +57,8 @@
         <div class="about-content">
             <div class="about-content-inner">
                 <h2 class="main-heading">About Us</h2>
-                <p class="about-content-subtitle">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque finibus, lacus vel aliquam molestie, urna lacus aliquet tortor, sit amet semper magna purus sed nunc. Proin sed lobortis leo. Sed elementum scelerisque eleifend. </p>
-                <a class="secondary-button-two" href="">Read More<i class="fas fa-angle-right"></i></a>
-             <!--   <div class="about-square-one"></div>
-                <div class="about-square-two"></div>
-                <div class="about-square-three"></div> --> 
+                <p class="about-content-subtitle"> Raman Is an Illusionist who is determined to create his own brand of magic! From sleight of hand to large illusions, he wants to be an innovator in this ancient art. </p>
+                <a class="secondary-button-two" href="pages/about.html">Read More<i class="fas fa-angle-right"></i></a>
             </div>
         </div>
         <div class="about-background-two"></div>
@@ -119,22 +116,21 @@
     <section class="featured-work-section">
         <div class="featured-work-title">
                 <h2 class="main-heading">Featured <span class="highlight-background">Work</span></h2>
-                <p class="main-subheading">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque finibus. </p> 
+                <p class="main-subheading">Check out some of our previous work. </p> 
                 <i class="fas fa-chevron-down"></i>            
         </div>
         <div class="featured-work">
                 <div>
                     <iframe class="featured-work-one"  width="560" height="315" src="https://www.youtube.com/embed/FHBUaoid1ss" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 </div>
-                <div class="featured-video-info">
+                <div class="featured-video-info-one">
                     <h3 class="main-heading-small">Monday Magic</h3>
-                    <p class="main-subheading">Audiences ideally range from 200 to 2000 people. The show is 40 to 50 minutes long. </p>            
-                    <a class="secondary-button-two" href="">See More Projects<i class="fas fa-angle-right"></i></a>
+                    <p class="main-subheading"> Depressed for the start of the work week? Hope this will add a bit of colour to it. </p>            
+                    <a class="secondary-button-two" href="pages/work.html">See More Projects<i class="fas fa-angle-right"></i></a>
                 </div>
-                <div class="featured-video-info">
-                    <h3 class="main-heading-small">Picture Magic</h3>
-                    <p class="main-subheading">Audiences ideally range from 200 to 2000 people. The show is 40 to 50 minutes long. </p>
-                    <a class="secondary-button-two" href="">See More Projects<i class="fas fa-angle-right"></i></a>
+                <div class="featured-video-info-two">
+                    <h3 class="main-heading-small">Making a Photograph Come to Life</h3>
+                    <a class="secondary-button-two" href="">My YouTube<i class="fas fa-angle-right"></i></a>
                 </div>
                 <div>
                     <iframe class="featured-work-two" width="560" height="315" src="https://www.youtube.com/embed/WBlrETm9Ato" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
@@ -153,7 +149,7 @@
         <div class="footer-container">
             <div class="footer-about">
                 <h3 class="footer-title">Raman Illusions</h3>
-                <p class="footer-about-subtitle">Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur illum beatae eius dignissimos veniam. Pariatur illum beatae eius dignissimos veniam.</p>
+                <p class="footer-about-subtitle">Raman Sharma is an International illusionist who has performed around the globe. His unique and creative style of magic has allowed him to entertain some of the biggest multinational companies in the world.</p>
                 <div class="footer-social-media">
                         <i class="footer-social-media-icon fab fa-facebook-f"></i>
                         <i class="footer-social-media-icon fab fa-instagram"></i>
