--- a/pages/about.html
+++ b/pages/about.html
@@ -49,26 +49,50 @@
     <!-- about page info -->
     <section>
         <div class="about-info-container">
-            <div class="about-info">
-                <h2 class="main-heading">Title Goes Here</h2>
-                <p class="main-subheading">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce volutpat est tellus, eget pellentesque turpis posuere vitae. Duis placerat molestie urna vel accumsan. Sed malesuada nibh sed lacus scelerisque, at vulputate orci euismod. At vulputate orci euismod.</p>
-                <a class="secondary-button-two" href="">My Shows<i class="fas fa-angle-right"></i></a>
+            <div class="about-info container">
+                <div>
+                    <h2 class="main-heading">Our Story</h2>
+                    <p class="main-subheading">Raman Is an Illusionist who is determined to create his own brand of magic! From sleight of hand to large illusions, he wants to be an innovator in this ancient art.</p>
+                    <a class="secondary-button-two" href="">My Shows<i class="fas fa-angle-right"></i></a>
+                </div>
             </div>
             <div class="position-relative">
                 <img class="img-fluid" src="https://instagram.fykz1-1.fna.fbcdn.net/v/t51.2885-15/e35/54446813_2191224517582332_9008173078773137776_n.jpg?_nc_ht=instagram.fykz1-1.fna.fbcdn.net&_nc_cat=100&_nc_ohc=x9QZr8b_zQYAX8ldwGI&oh=3142b06be2f23dc4b904b5485166be4b&oe=5E8CDF9D">
                 <div class="skew-right"></div>
             </div>
         </div>
-    </section>
-    <div class="about-info-container-two">
+        <div class="about-info-container-two">
             <div class="position-relative">
                 <img class="img-fluid" src="https://instagram.fykz1-1.fna.fbcdn.net/v/t51.2885-15/e35/54446813_2191224517582332_9008173078773137776_n.jpg?_nc_ht=instagram.fykz1-1.fna.fbcdn.net&_nc_cat=100&_nc_ohc=x9QZr8b_zQYAX8ldwGI&oh=3142b06be2f23dc4b904b5485166be4b&oe=5E8CDF9D">
                 <div class="skew-left"></div>
             </div>
-            <div class="about-info">
-                <h2 class="main-heading">Title Goes Here</h2>
-                <p class="main-subheading">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce volutpat est tellus, eget pellentesque turpis posuere vitae. Duis placerat molestie urna vel accumsan. Sed malesuada nibh sed lacus scelerisque, at vulputate orci euismod. At vulputate orci euismod.</p>
-                <a class="secondary-button-two" href="">My Shows<i class="fas fa-angle-right"></i></a>
+            <div class="about-info container">
+                <div>
+                    <p class="main-subheading">Unlike most of his contemporaries in magic, Raman decided to join the art much later on in his life! After completing his Masters degree in International business from the University of New South Wales in Sydney, Raman decided to study the art from Master Magician Christyrious!</p>
+                </div>
+            </div>
+        </div>
+        <div class="about-info-container">
+            <div class="about-info container">
+                <div>
+                    <p class="main-subheading margin-bottom-one">After strolling many years in nightclubs and restaurants, he realized the type of magic that he wants to bring to the world! “Magic that is visual, daring, and that makes people smile, is something I strives for. I do my best to produce original material, or at least put my own twist on effects that may be similar to what I am doing”. </p>
+                </div>
+            </div>
+            <div class="position-relative">
+                <img class="img-fluid" src="https://instagram.fykz1-1.fna.fbcdn.net/v/t51.2885-15/e35/54446813_2191224517582332_9008173078773137776_n.jpg?_nc_ht=instagram.fykz1-1.fna.fbcdn.net&_nc_cat=100&_nc_ohc=x9QZr8b_zQYAX8ldwGI&oh=3142b06be2f23dc4b904b5485166be4b&oe=5E8CDF9D">
+                <div class="skew-right"></div>
+            </div>
+        </div>
+        <div class="about-info-container-two">
+            <div class="position-relative">
+                <img class="img-fluid" src="https://instagram.fykz1-1.fna.fbcdn.net/v/t51.2885-15/e35/54446813_2191224517582332_9008173078773137776_n.jpg?_nc_ht=instagram.fykz1-1.fna.fbcdn.net&_nc_cat=100&_nc_ohc=x9QZr8b_zQYAX8ldwGI&oh=3142b06be2f23dc4b904b5485166be4b&oe=5E8CDF9D">
+                <div class="skew-left"></div>
+            </div>
+            <div class="about-info container">
+                <div>
+                    <p class="main-subheading">Spreading the message that everything is possible, Raman lives by his own mantra: “Breathe, Entertain, Inspire”.</p>
+                    <p class="main-subheading">Do you believe in magic?</p>
+                </div>
             </div>
         </div>
     </section>   
